# better_file_source

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: better_file_reader.h  cs8reader.h  main.cpp
